--- a/nav/index.html
+++ b/nav/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nav komponent</title>
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="container">
+            <div class="navbar-inner container">
+            <a href="#" class="navbar-brand">Logo</a>
+            <ul class="nav">
+                <li class="nav-item"><a href="#">Home</a></li>
+                <li class="nav-item"><a href="#">About</a></li></li>
+                <li class="nav-item"><a href="#">Contact</a></li></li>
+            </ul>
+        </div>
+    </nav>
+
+    <main class="container">
+        <h1>Main Content</h1>
+        <p>lorem ipsum mannen abow bre</p>
+        
+    </main>
+    <footer class="container">
+
+    </footer>
     
+
+
 </body>
 </html>
