--- a/card/index.html
+++ b/card/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CTA komponent</title>
     <link rel="stylesheet" href="../nav/nav.css" /> <!-- relativ sökväg -->
-    <link rel="stylesheet" href="cta.css">
+    <link rel="stylesheet" href="../cta/cta.css">
+    <link rel="stylesheet" href="hejhej.css">
   </head>
   <body>
     <nav class="navbar">
@@ -31,22 +32,31 @@
             <h1>This is TE19</h1>
             <div class="cta-right">
                 <p>TE19 is the best class ever.</p>
-                <p>Why don't you join us?</p>
-                <button>Vitlök</button>    
+                <p>Why don't you join us?</p> 
             </div>
         </header>
+        <div class="hej"></div>
 
 
+        <div class="card-dark-grey" style="width:50%">
 
-      <h1>Main content</h1>
-      <p>
-        Lorem ipsum abow bre Lorem ipsum abow bre Lorem ipsum abow bre Lorem ipsum abow bre
-        Lorem ipsum abow bre Lorem ipsum abow bre Lorem ipsum abow bre Lorem ipsum abow bre 
-        Lorem ipsum abow bre Lorem ipsum abow bre Lorem ipsum abow bre Lorem ipsum abow bre 
-      </p>
+          <div class="knapp">
+            <h3>Vitlök?</h3>
+            <img src="image/734.jpg" alt="bruh" style="width:80%">
+            <h5>Lorem ipsum med vitlök mannen?</h5>
+      
+            <div class="w3-section">
+              <button class="w3-button w3-green">Vitlök</button>
+              <button class="w3-button w3-red">Inge vitlök</button>
+            </div>
+          </div>
+          </div>
+        </div>
+
+    
     </main>
     <footer class="container">
-      <p>Footer content</p>
+   
     </footer>
   </body>
 </html>
