✨ sheeeeesh fixat massa grejor sheeeesh

--- a/card/index.html
+++ b/card/index.html
@@ -33,6 +33,7 @@
             <div class="cta-right">
                 <p>TE19 is the best class ever.</p>
                 <p>Why don't you join us?</p> 
+                <button>Vitlök</button> 
             </div>
         </header>
         <div class="hej"></div>
