--- a/cta/index.html
+++ b/cta/index.html
@@ -46,6 +46,13 @@
       </p>
     </main>
     <footer class="container">
+      <div class="group1"></div>
+      <p>Footer content</p>
+      <p>Footer content</p>
+      <p>Footer content</p>
+      <div class="group2"></div>
+      <p>Footer content</p>
+      <p>Footer content</p>
       <p>Footer content</p>
     </footer>
   </body>
